fix composer.json psr-4

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Jsyqw\\utils": "src/"
+            "Jsyqw\\utils\\": "src"
         }
     }
 }
