设计 头部字段的映射关系

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "phpoffice/phpexcel": "^1.8"
+    },
     "autoload": {
         "psr-4": {
             "Jsyqw\\Utils\\": "src/"
